test/integration/progs/errors/for_1.blu
func f() {
	return func() {
		return (5, "not-bool")
	}
}

for x in f() {
	print x
}
